# EliteAuth

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  package.json
deploy/: nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SDKS.md
scripts/: generate-signing-key.mjs
sdk/: README.md
sdk/cpp/: CMakeLists.txt  eliteauth.hpp
sdk/csharp/: EliteAuth.csproj  EliteAuthClient.cs
sdk/go/: eliteauth.go  go.mod
sdk/java/: EliteAuthClient.java  pom.xml
sdk/javascript/: eliteauth.js
sdk/python/: eliteauth.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/typescript/: eliteauth.ts
supabase/migrations/: 001_initial_schema.sql  002_signed_responses_and_anti_tamper.sql
website/: 404.html  _headers  _redirects  about.html  acceptable-use.html  app.js  cookies.html  dashboard.html  docs.html  donate.html  faq.html  features.html  hwid-reset.html  index.html  login.html  privacy.html  product.html  register.html  responsible-disclosure.html  robots.txt  security.html  site.webmanifest  sitemap.xml  styles.css  supabase-config.js  terms.html
worker/: package.json  worker.js  wrangler.toml.example
