cmake_minimum_required(VERSION 3.20)
project(eliteauth_sdk LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
find_package(CURL REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(SODIUM REQUIRED libsodium)
find_package(nlohmann_json REQUIRED)
add_library(eliteauth INTERFACE)
target_include_directories(eliteauth INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} ${SODIUM_INCLUDE_DIRS})
target_link_libraries(eliteauth INTERFACE CURL::libcurl ${SODIUM_LIBRARIES} nlohmann_json::nlohmann_json)
