[package]
name = "eliteauth"
version = "1.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
ed25519-dalek = "2.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
